--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@tomiaa/live2d": "^0.0.1",
     "@types/node": "^18.13.0",
     "@types/three": "^0.154.0",
+    "@types/markdown-it": "^14.1.2",
     "cross-env": "^7.0.3",
     "flexsearch": "^0.7.31",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^14.1.0",
     "markdown-it-github-alerts": "^0.3.0",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.4",
